--- a/original/builds/development/work.html
+++ b/original/builds/development/work.html
@@ -36,7 +36,7 @@
           <div id="links">
             <h6><a href="">View Website</a> | <a href="">View Data</a> | <a href="">Kickstarter Campaing</a></h6>
           </div>
-          <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Praesentium error aspernatur saepe at suscipit debitis pariatur est porro quod aut facere, consequuntur, nam voluptatum delectus. Expedita fuga, alias eos ducimus?Lorem ipsum dolor sit amet, consectetur adipisicing elit. Repellat ut quibusdam facere eos aliquam, odit quam consequatur nesciunt asperiores sunt, similique quo iure doloremque omnis accusantium dolore itaque ad consequuntur!</p>
+          <p>Lasdasdorem ipsum dolor sit amet, consectetur adipisicing elit. Praesentium error aspernatur saepe at suscipit debitis pariatur est porro quod aut facere, consequuntur, nam voluptatum delectus. Expedita fuga, alias eos ducimus?Lorem ipsum dolor sit amet, consectetur adipisicing elit. Repellat ut quibusdam facere eos aliquam, odit quam consequatur nesciunt asperiores sunt, similique quo iure doloremque omnis accusantium dolore itaque ad consequuntur!</p>
           <img class="img-responsive" src="images/works/test.png" />
           <figcaption>Fig1. - A view of the pulpit rock in Norway.</figcaption>
           <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Praesentium error aspernatur saepe at suscipit debitis pariatur est porro quod aut facere, consequuntur, nam voluptatum delectus. Expedita fuga, alias eos ducimus?</p>
